@@ -1,5 +1,6 @@
 29 September 2007
 
+* (nicm) Allow creation of detached sessions: "tmux new-session -d".
 * (nicm) Permit error messages to be passed back for transient clients like 
   rename. Also make rename -i work.
 * (nicm) Pass through bell in any window to current.
@@ -74,5 +75,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.15 2007-09-29 13:22:15 nicm Exp $
+$Id: CHANGES,v 1.16 2007-09-29 14:57:07 nicm Exp $
 
